--- a/src/gae/app.yaml
+++ b/src/gae/app.yaml
@@ -3,19 +3,52 @@ runtime: go
 api_version: go1
 
 #If omitted, the production server sets the expiration to 10 minutes.
+#The expiration time will be sent in the Cache-Control and Expires HTTP response headers,
+#and therefore, the files are likely to be cached by the user's browser, as well as by intermediate caching proxy servers such as Internet Service Providers.
+#After a file is transmitted with a given expiration time, there is generally no way to clear it out of intermediate caches,
+#even if the user clears their own browser cache. Re-deploying a new version of the app will not reset any caches.
+#Therefore, if you ever plan to modify a static file, it should have a short (less than one hour) expiration time. In most cases, the default 10-minute expiration time is appropriate.
 default_expiration: "10m"
 
+instance_class: F1 #default value
+
+#scaing settings
+automatic_scaling:
+  target_cpu_utilization: 0.6 #default value
+  #min_idle_instances: 5
+  max_idle_instances: automatic  # default value
+  min_pending_latency: 30ms  # default value
+  #max_pending_latency: automatic
+  #max_concurrent_requests: 50
+
 #can be used with os.Getenv(key)
-#env_varialbles:
-#  MY_VAR: 'a test env var'
+env_variables:
+  MY_VAR: 'a test env var'
 
 handlers:
+#  ecause the handler cannot determine which files in your application directory correspond with the given url and static_files patterns.upload is necessary.
 - url: /
   static_files: index.html
   upload: index.html
 
+## All URLs beginning with /stylesheets are treated as paths to
+## static files in the stylesheets/ directory.
 - url: /static
   static_dir: static
 
 - url: /hello
   script: _go_app
+
+#  ecause the handler cannot determine which files in your application directory correspond with the given url and static_files patterns.upload is necessary.
+- url: /crud
+  script: _go_app
+
+- url: /signin
+  script: _go_app
+
+error_handlers:
+  - file: default_error.html
+
+  - error_code: over_quota
+    file: over_quota.html
+
